Video jumping on scroll fixed

--- a/styles/Homepage.css
+++ b/styles/Homepage.css
@@ -28,6 +28,7 @@
     line-height: 50px;
     text-transform: uppercase;
     margin: 16px;
+    margin-right: 18px;
 }
 
 .circle-quote {
